only connect to HAL if there is no xrandr hardware

Nowadays it is a valid setup to have hal installed, but only start on demand
via D-Bus activation (instead of during boot). If we detect xrandr-capable
hardware, do not try to connect to hal.

https://bugzilla.gnome.org/show_bug.cgi?id=603470